Fix up marker position and z-index

--- a/src/components/timeline.less
+++ b/src/components/timeline.less
@@ -2,7 +2,7 @@
 
 @timeline-playhead-handle-size: 18px;
 @timeline-playhead-arrow-size: @timeline-playhead-handle-size / 2;
-@timeline-track-padding: 0 13px 0 12px;
+@timeline-track-padding: 0 @padding-small;
 
 .pl-timeline {
   display: flex;
@@ -97,10 +97,10 @@
       background-color: fade(@gray-darker, 80%);
       position: absolute;
       top: 0;
-      z-index: 1;
     }
     &:before {
       left: 0;
+      z-index: 1;
     }
     &:after {
       right: 0;
@@ -110,6 +110,9 @@
       flex-grow: 1;
       padding-top: @padding-small;
       position: relative;
+      .pl-timeline-marker {
+        z-index: 1;
+      }
     }
     .pl-timeline-track {
       height: @padding-base;
